<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@color/colorWhite">
    <TextView
        android:id="@+id/dialog_beizhu_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beizhu_dialog_fill"
        android:textSize="16sp"
        android:textColor="@color/colorBlack"/>
    <EditText
        android:id="@+id/dialog_beizhu_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_beizhu_tv"
        android:hint="@string/beizhu_dialog_input"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textSize="14sp"
        android:background="@color/colorWhite">
        <requestFocus/>
    </EditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/dialog_beizhu_et"
        android:padding="10dp">
        <Button
            android:id="@+id/dialog_beizhu_btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/beizhu_dialog_cancel"
            android:background="@drawable/dialog_btn_bg"
            android:textStyle="bold"
            android:textColor="@color/colorGreen"
            android:layout_marginRight="5dp"/>
        <Button
            android:id="@+id/dialog_beizhu_btn_ensure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/beizhu_dialog_ensure"
            android:background="@drawable/main_recordbtn_bg"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_marginRight="5dp"/>
    </LinearLayout>
</RelativeLayout>