<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGray">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/m_item_head_expanse_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_expense"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/m_item_head_expanse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥ 0"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:layout_below="@+id/m_item_head_expanse_tip"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <ImageView
            android:id="@+id/m_head_hide_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/m_item_head_expanse"
            android:layout_alignParentRight="true"
            android:src="@drawable/m_head_hide"/>

        <TextView
            android:id="@+id/m_item_head_income_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_income"
            android:layout_below="@+id/m_item_head_expanse"
            android:layout_marginTop="10dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/m_item_head_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/m_item_head_expanse"
            android:layout_toRightOf="@+id/m_item_head_income_tip"
            android:text="￥ 0"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m_budget_left"
            android:layout_below="@+id/m_item_head_expanse"
            android:layout_toLeftOf="@+id/m_item_head_budget_left"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/m_item_head_budget_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="￥ 0"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/m_item_head_expanse"
            android:layout_alignParentRight="true"
            android:textSize="18sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="查看图标分析"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorGreen"
            android:layout_below="@+id/m_item_head_income_tip"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/m_chart"
            android:drawablePadding="10dp"
            />

    </RelativeLayout>

    <TextView
        android:id="@+id/m_item_head_today_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/m_money_info_today"
        android:textSize="18sp"/>

</LinearLayout>
